# SAGE_IMC

./: CMakeLists.txt  Network_VGG8.csv  README.md  arch_generator_for_layer.cpp  arch_generator_for_net.cpp  environment.yaml  main.cpp  main_iter.cpp  script_dse.py  script_evaluate_previous_arch.py
ArchitectureTemplate/include/: BufferUnit.h  DigitalElements.h  HierarchyObject.h  HierarchyRoot.h  InterConnect.h
ArchitectureTemplate/src/: BufferUnit.cpp  CMakeLists.txt  DigitalElements.cpp  HierarchyObject.cpp  HierarchyRoot.cpp  InterConnect.cpp
CircuitModule/include/: Adder.h  AdderTree.h  BitShifter.h  Bus.bak  Bus.h  CIMArray.h  Comparator.h  CurrentSenseAmp.h  DFF.h  DigitalMux.h  HBus.h  LevelShifter.h  LinearArray.h  MaxPooling.h  Mesh.h  MultilevelSenseAmp.h  SarADC.h  ShiftAdd.h  SwitchMatrix.h
CircuitModule/src/: Adder.cpp  AdderTree.cpp  BitShifter.cpp  Buffer.cpp  Bus.bak  Bus.cpp  CIMArray.cpp  CIMArray.sram.bak  CMakeLists.txt  Comparator.cpp  CurrentSenseAmp.cpp  DFF.cpp  DigitalMux.cpp  HBus.cpp  LevelShifter.cpp  LinearArray.cpp  MaxPooling.cpp  Mesh.cpp  MultilevelSenseAmp.cpp  NewSwitchMatrix.cpp  SarADC.cpp  ShiftAdd.cpp  SwitchMatrix.cpp
Scheduler/include/: LayerScheduler.h  NetworkScheduler.h
Scheduler/src/: CMakeLists.txt  LayerScheduler_00.cpp  LayerScheduler_01.cpp  NetworkScheduler.cpp  scheduler_type.md
include/: Param.h  util.h
src/: CMakeLists.txt  Param.cpp  util.cpp
